--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: ruby
 rvm:
   - 2.2.3
 before_install: gem install bundler -v 1.11.2
+script:
+  - bundle exec yard -n
+  - bundle exec rspec
