--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ rvm:
   - 2.2.3
 before_install: gem install bundler -v 1.11.2
 script:
-  - bundle install
-  - bundle exec yard -n
-  - bundle exec rspec
+  - 'bundle install'
+  - 'bundle exec yard -n'
+  - 'bundle exec rspec spec'
