--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ rvm:
 before_install: gem install bundler -v 1.11.2
 script:
   - 'bundle exec yard -n'
-  - 'bundle exec rspec spec'
+  - 'bundle exec rake'
